prevent wrapping in intro

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -227,6 +227,7 @@ img {
     letter-spacing: -0.02em;
     line-height: normal;
     font-size: 1.3em;
+    white-space: nowrap;
   }
   .main .container {
     width: 67%;
@@ -343,6 +344,7 @@ img {
     top: 10em;
     font-size: 1.3em;
     text-align: center;
+    white-space: nowrap;
   }
   .main .container {
     width: 65%;
